# task-execution-on-k8s

./: .flake8  .gitignore  Dockerfile  combine_results.py  docker-compose.yml  main.py  profile_inference.py  pyproject.toml  requirements.txt  run_all_test.sh  run_all_tests.py  setup_container.sh
examples/: check.py  check_model_features.py  get_system_info.py  run_image_detection.py
k8s-jobs/base/: 2025-06-25-job.yaml.bak  job.yaml  kustomization.yaml
k8s-jobs/overlays/: kustomization.yaml
k8s-jobs/overlays/normal/: kustomization.yaml
k8s-jobs/overlays/resume/: kustomization.yaml
k8s-jobs/overlays/worker1/: kustomization.yaml  node-patch.yaml
k8s-jobs/overlays/worker2/: kustomization.yaml  node-patch.yaml
k8s-jobs/overlays/worker3/: node-patch.yaml
k8s-jobs/overlays/worker4/: node-patch.yaml
k8s-jobs/overlays/worker5/: kustomization.yaml  node-patch.yaml
k8s-jobs/overlays/worker6/: node-patch.yaml
k8s-jobs/overlays/worker7/: node-patch.yaml
profiles/: profiler.txt
src/common/: error.py  logger.py  storage.py  utils.py
src/run_single_task/: debug_utils.py  feature_extractor.py  main.py  run_single_task.py  storage.py  utils.py
tasks_csv/prd/: create_tasks_list.py
tasks_csv/test/: create_tasks_list.py
test-k8s-jobs/base/: kustomization.yaml  test-job.yaml
test-k8s-jobs/overlays/worker1/: node-patch.yaml
test-k8s-jobs/overlays/worker2/: node-patch.yaml
test-k8s-jobs/overlays/worker3/: kustomization.yaml  node-patch.yaml
test-k8s-jobs/overlays/worker4/: kustomization.yaml  node-patch.yaml
(+35 files in other folders)
